--- a/entities/codegen/templates/database/models/__init__.py.j2
+++ b/entities/codegen/templates/database/models/__init__.py.j2
@@ -5,9 +5,10 @@
 from sqlalchemy.orm import configure_mappers
 
 from platformics.database.models.base import Base, meta, Entity  # noqa: F401
-from database.models.sample import Sample  # noqa: F401
-from database.models.sequencing_read import SequencingRead  # noqa: F401
-from database.models.contig import Contig  # noqa: F401
+{%- for class in classes %}
+from database.models.{{ class.snake_name }} import {{ class.name }}  # noqa: F401
+{%- endfor %}
 from database.models.file import File, FileStatus  # noqa: F401
 
 configure_mappers()
+
