--- a/entities/codegen/templates/database/models/class_name.py.j2
+++ b/entities/codegen/templates/database/models/class_name.py.j2
@@ -2,10 +2,11 @@
 # Make changes to the template codegen/templates/database/models/class_name.py.j2 instead.
 
 import uuid
+import datetime
 from typing import TYPE_CHECKING
 
 from platformics.database.models.base import Entity
-from sqlalchemy import ForeignKey, String, Float, Integer, Enum
+from sqlalchemy import ForeignKey, String, Float, Integer, Enum, Boolean, DateTime
 from sqlalchemy.dialects.postgresql import UUID
 from sqlalchemy.orm import Mapped, mapped_column, relationship
 {%- for field in cls.enum_fields %}
@@ -42,12 +43,16 @@ class {{cls.name}}(Entity):
     {{attr.name}}: Mapped[uuid.UUID] = mapped_column({%- if attr.inverse %}ForeignKey("{{attr.inverse}}"){%- else %}UUID{%- endif %}, nullable={{ "False" if attr.required else "True"}}, primary_key={{ "True" if attr.identifier else "False"}})
         {%- elif attr.type == "string" %}
     {{attr.name}}: Mapped[str] = mapped_column(String, nullable={{ "False" if attr.required else "True"}})
-        {%- elif attr.type == "integer" %}
+        {%- elif attr.type == "int" %}
     {{attr.name}}: Mapped[int] = mapped_column(Integer, nullable={{ "False" if attr.required else "True"}})
         {%- elif attr.type == "float" %}
     {{attr.name}}: Mapped[int] = mapped_column(Float, nullable={{ "False" if attr.required else "True"}})
         {%- elif attr.is_enum %}
     {{attr.name}}: Mapped[{{attr.type}}] = mapped_column(Enum({{attr.type}}, native_enum=False), nullable={{ "False" if attr.required else "True"}})
+        {%- elif attr.type == "boolean" %}
+    {{attr.name}}: Mapped[bool] = mapped_column(Boolean, nullable={{ "False" if attr.required else "True"}})
+        {%- elif attr.type == "date" %}
+    {{attr.name}}: Mapped[datetime.datetime] = mapped_column(DateTime, nullable={{ "False" if attr.required else "True"}})
         {%- else %}
             {%- if attr.multivalued %}
     {{attr.name}}: Mapped[list[{{attr.type}}]] = relationship("{{attr.type}}", back_populates="{{attr.inverse_field}}", uselist=True, foreign_keys="{{attr.type}}.{{attr.inverse_field}}_id")
