--- a/entities/codegen/templates/api/queries.py.j2
+++ b/entities/codegen/templates/api/queries.py.j2
@@ -4,7 +4,7 @@
 import strawberry
 from strawberry import relay
 from typing import Sequence
-from api.files import File, resolve_files
+from api.files import File, resolve_file
 {%- for class in classes %}
 from api.types.{{ class.snake_name }} import {{ class.name }}, resolve_{{ class.snake_name }}
 {%- endfor %}
@@ -16,7 +16,7 @@ class Query:
     node: relay.Node = relay.node()
 
     # Query files
-    files: Sequence[File] = resolve_files
+    file: Sequence[File] = resolve_file
 
     # Query entities
     {%- for class in classes %}
