--- a/entities/codegen/templates/api/types/class_name.py.j2
+++ b/entities/codegen/templates/api/types/class_name.py.j2
@@ -252,8 +252,7 @@ async def create_{{ cls.snake_name|lower }}(
     params = input.__dict__
     params["owner_user_id"] = int(principal.id)
     new_entity = db.{{ cls.name }}(**params)
-    print(new_entity)
-    {# session.add(new_entity) #}
-    {# await session.commit() #}
+    session.add(new_entity)
+    await session.commit()
 
     return new_entity
